--- a/arch/arm/dts/rk3568-mg-evb.dts
+++ b/arch/arm/dts/rk3568-mg-evb.dts
@@ -82,7 +82,7 @@
 		default-brightness-level = <255>;
 	};
 
-	es8388 {
+	sound {
 		compatible = "simple-audio-card";
 		simple-audio-card,name = "I2S1ESS8388";
 		simple-audio-card,format = "i2s";
