--- a/arch/arm/mach-rockchip/Kconfig
+++ b/arch/arm/mach-rockchip/Kconfig
@@ -73,18 +73,19 @@ endif
 
 if 64BIT
 
+config MACH_DIASOM_DS_RK3568_EVB
+	bool "Diasom DS-RK3568-EVB"
+	depends on $(success,test -e $(srctree)/arch/arm/boards/diasom-rk3568-evb/sdram-init.bin)
+	select ARCH_RK3568
+	select DEFAULT_ENVIRONMENT
+	help
+	  Say Y here if you are using a Diasom DS-RK3568-EVB board
+
 config MACH_RK3568_EVB
 	select ARCH_RK3568
 	bool "RK3568 EVB"
 	help
 	  Say Y here if you are using a RK3568 EVB
-
-config MACH_RK3568_MG_EVB
-	select ARCH_RK3568
-	depends on $(success,test -e $(srctree)/arch/arm/boards/rockchip-rk3568-mg-evb/sdram-init.bin)
-	bool "MG RK3568 EVB"
-	help
-	  Say Y here if you are using a MacroGroup RK3568 EVB
 
 config MACH_RK3568_BPI_R2PRO
 	select ARCH_RK3568
