--- a/arch/arm/dts/imx8mm-diasom-evb.dts
+++ b/arch/arm/dts/imx8mm-diasom-evb.dts
@@ -582,7 +582,7 @@
 
 &uart1 {
 	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_uart1 &pinctrl_esp32>;
+	pinctrl-0 = <&pinctrl_uart1>;
 	status = "okay";
 };
 
@@ -682,6 +682,9 @@
 };
 
 &iomuxc {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_esp32>;
+
 	pinctrl_adv7535: adv7535-grp {
 		fsl,pins = <
 			MX8MM_IOMUXC_GPIO1_IO08_GPIO1_IO8		0x19
