imx8: spi: Fix crash with zero spi-max-frequency.

--- a/arch/arm/dts/imx8mm-diasom-evb.dts
+++ b/arch/arm/dts/imx8mm-diasom-evb.dts
@@ -176,6 +176,7 @@
 	spi@0 {
 		compatible = "rohm,dh2228fv";
 		reg = <0>;
+		spi-max-frequency = <20000000>;
 	};
 };
 
@@ -188,6 +189,7 @@
 	spi@0 {
 		compatible = "rohm,dh2228fv";
 		reg = <0>;
+		spi-max-frequency = <20000000>;
 	};
 };
 
