--- a/arch/arm/dts/rk3568-diasom-evb.dts
+++ b/arch/arm/dts/rk3568-diasom-evb.dts
@@ -73,7 +73,7 @@
 		rx-fifo-depth = <6>;
 	};
 
-	backlight {
+	backlight: backlight {
 		compatible = "pwm-backlight";
 		pwms = <&pwm5 0 25000 0>;
 		brightness-levels = <0 255>;
@@ -116,12 +116,6 @@
 			linux,default-trigger = LED_FUNCTION_ACTIVITY;
 			default-state = "off";
 		};
-	};
-
-	panel {
-		pinctrl-names = "default";
-		pinctrl-0 = <&dsi_pins>;
-		//TODO:
 	};
 
 	sound0: es8388-sound {
@@ -293,25 +287,45 @@
 	/delete-node/ opp-1992000000;
 };
 
-//&dsi0 {
-//	status = "okay";
-//};
+&dsi0 {
+	#address-cells = <1>;
+	#size-cells = <0>;
+	status = "okay";
 
-//&dsi_dphy0 {
-//	status = "okay";
-//};
+	panel@0 {
+		pinctrl-names = "default";
+		pinctrl-0 = <&dsi_pins>;
+		compatible = "raystar,display-rfh1010j-ayh";
+		reg = <0>;
+		backlight = <&backlight>;
+		reset-gpios = <&gpio0 RK_PB6 GPIO_ACTIVE_HIGH>;
+		enable-gpios = <&gpio0 RK_PC5 GPIO_ACTIVE_HIGH>;
+		vdd-supply = <&vcc3v3_sys>;
+		vccio-supply = <&vcc1v8_sys>;
 
-//&dsi0_in {
-//	dsi0_in_vp1: endpoint {
-//		remote-endpoint = <&vp1_out_dsi0>;
-//	};
-//};
+		port {
+			mipi_in_panel: endpoint {
+				remote-endpoint = <&mipi_out_panel>;
+			};
+		};
+	};
+};
 
-//&dsi0_out {
-//	mipi_out_panel: endpoint {
-//		remote-endpoint = <&mipi_in_panel>;
-//	};
-//};
+&dsi_dphy0 {
+	status = "okay";
+};
+
+&dsi0_in {
+	dsi0_in_vp1: endpoint {
+		remote-endpoint = <&vp1_out_dsi0>;
+	};
+};
+
+&dsi0_out {
+	mipi_out_panel: endpoint {
+		remote-endpoint = <&mipi_in_panel>;
+	};
+};
 
 &gmac0 {
 	assigned-clocks = <&cru SCLK_GMAC0_RX_TX>, <&cru SCLK_GMAC0>;
@@ -838,12 +852,12 @@
 	};
 };
 
-//&vp1 {
-//	vp1_out_dsi0: endpoint@ROCKCHIP_VOP2_EP_MIPI0 {
-//		reg = <ROCKCHIP_VOP2_EP_MIPI0>;
-//		remote-endpoint = <&dsi0_in_vp1>;
-//	};
-//};
+&vp1 {
+	vp1_out_dsi0: endpoint@ROCKCHIP_VOP2_EP_MIPI0 {
+		reg = <ROCKCHIP_VOP2_EP_MIPI0>;
+		remote-endpoint = <&dsi0_in_vp1>;
+	};
+};
 
 &uart2 {
 	status = "okay";
