--- a/arch/arm/configs/diasom_rk3568_evb_defconfig
+++ b/arch/arm/configs/diasom_rk3568_evb_defconfig
@@ -86,6 +86,7 @@ CONFIG_NET_NFS=y
 CONFIG_NET_NETCONSOLE=y
 CONFIG_OFDEVICE=y
 CONFIG_OF_BAREBOX_DRIVERS=y
+CONFIG_OF_OVERLAY_LIVE=y
 CONFIG_DRIVER_SERIAL_NS16550=y
 CONFIG_DRIVER_NET_DESIGNWARE_ROCKCHIP=y
 CONFIG_REALTEK_PHY=y
