--- a/arch/arm/configs/diasom_rk3568_evb_defconfig
+++ b/arch/arm/configs/diasom_rk3568_evb_defconfig
@@ -70,6 +70,8 @@ CONFIG_CMD_DETECT=y
 CONFIG_CMD_GPIO=y
 CONFIG_CMD_I2C=y
 CONFIG_CMD_SMC=y
+# CONFIG_CMD_USB is not set
+CONFIG_CMD_USBGADGET=y
 CONFIG_CMD_WD=y
 CONFIG_CMD_BAREBOX_UPDATE=y
 CONFIG_CMD_OF_DIFF=y
@@ -95,7 +97,10 @@ CONFIG_I2C=y
 CONFIG_I2C_RK3X=y
 CONFIG_USB_HOST=y
 CONFIG_USB_DWC3=y
-CONFIG_USB_STORAGE=y
+CONFIG_USB_DWC3_GADGET=y
+# CONFIG_USB_DWC3_OF_SIMPLE is not set
+CONFIG_USB_GADGET=y
+CONFIG_USB_GADGET_SERIAL=y
 CONFIG_MCI=y
 CONFIG_MCI_STARTUP=y
 CONFIG_MCI_MMC_BOOT_PARTITIONS=y
