rk3568: Revise defconfig

--- a/arch/arm/configs/diasom_rk3568_evb_defconfig
+++ b/arch/arm/configs/diasom_rk3568_evb_defconfig
@@ -26,6 +26,7 @@ CONFIG_BTHREAD=y
 CONFIG_STATE=y
 CONFIG_BOOTCHOOSER=y
 CONFIG_RESET_SOURCE=y
+CONFIG_SYSTEMD_OF_WATCHDOG=y
 CONFIG_DEBUG_LL=y
 CONFIG_DEBUG_PBL=y
 CONFIG_CMD_DMESG=y
@@ -69,7 +70,9 @@ CONFIG_CMD_CLK=y
 CONFIG_CMD_DETECT=y
 CONFIG_CMD_GPIO=y
 CONFIG_CMD_I2C=y
+CONFIG_CMD_LED=y
 CONFIG_CMD_SMC=y
+CONFIG_CMD_LED_TRIGGER=y
 # CONFIG_CMD_USB is not set
 CONFIG_CMD_USBGADGET=y
 CONFIG_CMD_WD=y
@@ -100,6 +103,7 @@ CONFIG_USB_DWC3=y
 CONFIG_USB_DWC3_GADGET=y
 # CONFIG_USB_DWC3_OF_SIMPLE is not set
 CONFIG_USB_GADGET=y
+# CONFIG_USB_GADGET_AUTOSTART is not set
 CONFIG_USB_GADGET_SERIAL=y
 CONFIG_MCI=y
 CONFIG_MCI_STARTUP=y
@@ -107,7 +111,6 @@ CONFIG_MCI_MMC_BOOT_PARTITIONS=y
 CONFIG_MCI_MMC_GPP_PARTITIONS=y
 CONFIG_MCI_DW=y
 CONFIG_MCI_ROCKCHIP_DWCMSHC=y
-CONFIG_MCI_ARASAN=y
 CONFIG_MFD_RK808=y
 CONFIG_SRAM=y
 CONFIG_LED=y
