rk3568: Add support for recovery key and fastboot

--- a/arch/arm/configs/diasom_rk3568_evb_defconfig
+++ b/arch/arm/configs/diasom_rk3568_evb_defconfig
@@ -27,6 +27,7 @@ CONFIG_STATE=y
 CONFIG_BOOTCHOOSER=y
 CONFIG_RESET_SOURCE=y
 CONFIG_SYSTEMD_OF_WATCHDOG=y
+CONFIG_FASTBOOT_SPARSE=y
 CONFIG_DEBUG_LL=y
 CONFIG_DEBUG_PBL=y
 CONFIG_CMD_DMESG=y
@@ -73,7 +74,6 @@ CONFIG_CMD_I2C=y
 CONFIG_CMD_LED=y
 CONFIG_CMD_SMC=y
 CONFIG_CMD_LED_TRIGGER=y
-# CONFIG_CMD_USB is not set
 CONFIG_CMD_USBGADGET=y
 CONFIG_CMD_WD=y
 CONFIG_CMD_BAREBOX_UPDATE=y
@@ -92,6 +92,8 @@ CONFIG_NET_NETCONSOLE=y
 CONFIG_OFDEVICE=y
 CONFIG_OF_BAREBOX_DRIVERS=y
 CONFIG_OF_OVERLAY_LIVE=y
+CONFIG_AIODEV=y
+CONFIG_ROCKCHIP_SARADC=y
 CONFIG_DRIVER_SERIAL_NS16550=y
 CONFIG_DRIVER_NET_DESIGNWARE_ROCKCHIP=y
 CONFIG_REALTEK_PHY=y
@@ -100,11 +102,12 @@ CONFIG_I2C=y
 CONFIG_I2C_RK3X=y
 CONFIG_USB_HOST=y
 CONFIG_USB_DWC3=y
-CONFIG_USB_DWC3_GADGET=y
+CONFIG_USB_DWC3_DUAL_ROLE=y
 # CONFIG_USB_DWC3_OF_SIMPLE is not set
 CONFIG_USB_GADGET=y
 # CONFIG_USB_GADGET_AUTOSTART is not set
 CONFIG_USB_GADGET_SERIAL=y
+CONFIG_USB_GADGET_FASTBOOT=y
 CONFIG_MCI=y
 CONFIG_MCI_STARTUP=y
 CONFIG_MCI_MMC_BOOT_PARTITIONS=y
@@ -133,3 +136,4 @@ CONFIG_FS_FAT=y
 CONFIG_FS_FAT_WRITE=y
 CONFIG_FS_FAT_LFN=y
 CONFIG_ZLIB=y
+CONFIG_RK_USB_LOADER=y
