Add nvmem drivers

--- a/arch/arm/configs/diasom_imx8m_evb_defconfig
+++ b/arch/arm/configs/diasom_imx8m_evb_defconfig
@@ -101,6 +101,7 @@ CONFIG_SRAM=y
 CONFIG_WATCHDOG=y
 CONFIG_WATCHDOG_IMX=y
 CONFIG_NVMEM=y
+CONFIG_NVMEM_RMEM=y
 CONFIG_NVMEM_SNVS_LPGPR=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED=y
